Added wireless terminal!